[package]
name = "lxp"
version = "0.1.1"
authors = ["simsys <winfried.simon@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
confy = "0.4.0"
chrono = "0.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.11", features = ["std"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0.13.0"
md5 = "0.7.0"
futures = "0.3"
notify = "4.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1