[package]
name = "lxp"
version = "0.2.0"
authors = ["simsys <winfried.simon@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.27"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0.13"
md5 = "0.7"
futures = "0.3"
notify = "4.0"
dirs = "4.0"
toml = "0.5"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1